- Added new entity and DTO. - Fixed some logic for order service.